# pydanticai-tool-agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
deploy/lxc/: README.md  pydanticai-tool-agent.env.example
deploy/lxc/systemd/: pydanticai-tool-agent.service
src/app/: artifacts.py  config.py  morning_report_defaults.py  run_all.py
src/app/agent/: factory.py  service.py
src/app/bot/: formatting.py  handlers.py  telegram_app.py  uploads.py
src/app/daily_training_advice/: __init__.py  context.py  factory.py  models.py  service.py
src/app/morning_report/: __init__.py  context.py  factory.py  models.py  service.py
src/app/plugins/: base.py  loader.py
src/app/plugins/caldav/: cli.py  client.py  ics.py  models.py  plugin.py  service.py
src/app/plugins/get_time/: __init__.py  cli.py  models.py  plugin.py  service.py
src/app/plugins/intervals_icu/: __init__.py  cli.py  client.py  models.py  plugin.py  service.py
src/app/plugins/open_meteo/: cli.py  client.py  models.py  plugin.py  service.py
src/app/plugins/route_planner/: cli.py  geo.py  geometry.py  gpx_enrichment.py  gpx_images.py  models.py  plugin.py  round_trip.py  routing.py  service.py  strava.py  strava_nogo.py
src/app/web/: app.py
tests/: test_artifacts.py  test_config.py  test_run_all.py
tests/agent/: test_factory.py  test_service.py
tests/bot/: test_formatting.py  test_handlers.py
tests/daily_training_advice/: test_daily_training_advice_context.py  test_daily_training_advice_service.py
tests/morning_report/: test_context.py  test_morning_report_service.py
tests/plugins/: test_caldav.py  test_caldav_cli.py  test_get_time.py  test_gpx_enrichment.py  test_intervals_icu.py  test_loader.py  test_open_meteo.py  test_open_meteo_plugin.py  test_route_planner.py
